@@ -1,3 +1,7 @@
+bloonix-server (0.35) released at 2015-08-XX
+
+    * Fixed: try to prevent ntp issues by calculating the next service check.
+
 bloonix-server (0.34) released at 2015-08-18
 
     * Fixed: Can't modify non-lvalue subroutine call at Server.pm line 1379.
